# djangoSecurityHunter

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  action.yml  django_security_hunter.toml  djangoguard.toml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  github_code_scanning.md  rules.md
examples/ci/: github-actions-django-app.yml  gitlab-ci.yml
src/django_security_hunter/: cli.py  config.py  django_profile_runner.py  engine.py  limits.py  models.py  output.py  package_meta.py  plugins.py  profile_analysis.py  profile_pytest.py  profile_pytest_plugin.py  profile_runner.py  settings_module.py  validation.py
src/django_security_hunter/collectors/: __init__.py  ast_scanner.py  bandit_runner.py  concurrency_scan.py  deserialization_static_scan.py  drf_static_scan.py  model_schema_scan.py  pip_audit_runner.py  project_files.py  secrets_and_logging_scan.py  semgrep_runner.py  settings_loader.py  ssrf_static_scan.py  xss_static_scan.py
src/django_security_hunter/rules/: __init__.py  authz_heuristics.py  concurrency.py  dependency_audit.py  django_settings.py  drf_auth_urls.py  drf_security.py  external_integrations.py  external_scanners.py  model_integrity.py  profiling.py  static_patterns.py
src/django_security_hunter/writers/: console.py  json_writer.py  sarif_writer.py
src/djangoguard/: __init__.py  cli.py  config.py  engine.py  models.py  output.py  package_meta.py  profile_analysis.py  profile_pytest_plugin.py  profile_runner.py  settings_module.py
src/djangoguard/collectors/: ast_scanner.py  concurrency_scan.py  deserialization_static_scan.py  drf_static_scan.py  model_schema_scan.py  secrets_and_logging_scan.py  settings_loader.py  ssrf_static_scan.py  xss_static_scan.py
src/djangoguard/rules/: __init__.py  concurrency.py  django_settings.py  drf_security.py  profiling.py  static_patterns.py
src/djangoguard/writers/: __init__.py  console.py  json_writer.py  sarif_writer.py
src/djsecinspect/: cli.py  config.py  limits.py  output.py
src/djsecinspect/collectors/: bandit_runner.py  pip_audit_runner.py  runtime_queries.py  semgrep_runner.py  settings_loader.py
src/djsecinspect/rules/: __init__.py  concurrency.py  django_settings.py  drf_security.py  external_integrations.py  profiling.py  static_patterns.py
src/djsecinspect/writers/: console.py  json_writer.py  sarif_writer.py
tests/: conftest.py  test_cli.py  test_collectors_external_json.py  test_config.py  test_engine.py  test_external_integrations_env.py  test_external_scanners.py  test_limits.py  test_models.py  test_output.py  test_output_schema.py  test_plugins.py  test_project_files.py  test_scanner_resilience.py  test_settings_loader.py  test_settings_module.py  test_validation_and_sarif.py
tests/fixtures/djg001_proj/mysite/: __init__.py  settings.py  settings_ci.py
tests/fixtures/drf_scan_empty/: __init__.py
tests/rules/: test_authz_heuristics.py  test_concurrency.py  test_dependency_audit.py  test_django_settings.py  test_drf_auth_urls.py  test_drf_security.py  test_external_scanners.py  test_model_integrity.py  test_profiling.py  test_static_patterns.py
