[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-security-hunter"
version = "0.1.0"
description = "Django + DRF security, reliability and performance inspector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "django-security-hunter contributors" }]
dependencies = [
  "typer>=0.12.3",
  "django>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pip-audit>=2.6",
  "bandit[toml]>=1.7.5",
]

[project.scripts]
django_security_hunter = "django_security_hunter.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.django_security_hunter]
severity_threshold = "WARN"
query_count_threshold = 50
db_time_ms_threshold = 200
enable_pip_audit = false
enable_bandit = false
enable_semgrep = false
