[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-security-hunter"
version = "0.1.0"
description = "Django + DRF security, reliability and performance inspector"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "django-security-hunter contributors" }]
keywords = ["django", "drf", "security", "static-analysis", "sarif", "linting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7",
  "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/abu-rayhan-alif/djangoGuard"
Repository = "https://github.com/abu-rayhan-alif/djangoGuard"
Issues = "https://github.com/abu-rayhan-alif/djangoGuard/issues"
Documentation = "https://github.com/abu-rayhan-alif/djangoGuard/blob/main/docs/rules.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
django_security_hunter = "django_security_hunter.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.django_security_hunter]
severity_threshold = "WARN"
query_count_threshold = 50
db_time_ms_threshold = 200

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
