[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-security-hunter"
version = "0.5.0"
description = "Install: pip install django-security-hunter. Run: django_security_hunter scan --project . --settings yourproject.settings. Django & DRF security/reliability inspector (settings, REST defaults, static XSS/SSRF/secrets hints, ORM & N+1 signals); optional pip-audit, Bandit, Semgrep; JSON & SARIF."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Abu Rayhan Alif" }]
keywords = ["django", "drf", "security", "static-analysis", "sarif", "linting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7",
  "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/abu-rayhan-alif/djangoSecurityHunter"
Repository = "https://github.com/abu-rayhan-alif/djangoSecurityHunter"
Issues = "https://github.com/abu-rayhan-alif/djangoSecurityHunter/issues"
Documentation = "https://github.com/abu-rayhan-alif/djangoSecurityHunter/blob/main/docs/rules.md"
Changelog = "https://github.com/abu-rayhan-alif/djangoSecurityHunter/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pip-audit>=2.6",
  "bandit>=1.7",
  "pytest-django>=4.8",
  "black>=26.3.1",
  "cryptography>=46.0.6",
  "gunicorn>=22.0.0",
  "pygments>=2.20.0",
  "pyjwt>=2.12.0",
  "requests>=2.33.0",
  "urllib3>=2.6.3",
]

[project.scripts]
django_security_hunter = "django_security_hunter.cli:app"
djangoguard = "django_security_hunter.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.django_security_hunter]
severity_threshold = "WARN"
query_count_threshold = 50
db_time_ms_threshold = 200

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:django"
